--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
-<title>Funny You Should Mention It</title>
+<title>Strangely Enough</title>
 <link rel="stylesheet" href="main.css">
 </head>
 <body> 
+<Header>
 <h1>This is my website.</h1>
-<p> Innit great? <p>
+</header>
+<p> Sort of. <p>
 </body> 
