--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body> 
 <Header>
-<h1>This is my website.</h1>
+<h3 class="intro">Welcome!</h3>
+<h1 class="title">Strangley Enough...</h1>
 </header>
-<p> Sort of. <p>
+<article>
+<p>Reality becomes digital: my website is <span class="live">live! 
+  <span class="def"> Def: A state being able to crawl, slither, fly, or plod.</span>
+  </span></p>
+</article>
 </body> 
