--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
 </head>
 <body> 
 <Header>
-<h3 class="intro">Welcome!</h3>
-<h1 class="title">Strangley Enough...</h1>
+<h2 class="intro">Welcome!</h2>
+<h1 class="title">Strangely Enough...</h1>
 </header>
+  <nav> 
+    <ul> 
+      <li> <a href="#">Website </a></li>
+      <li> <a href="#">Project 1</a></li>
+      <li> <a href="#">Project 2</a></li>
+      </ul>
+    </nav>
+      
 <article>
-<p>Reality becomes digital: my website is <span class="live">live! 
+<p><span class="lead">Reality becomes digital: </span> my website is <span class="live">live! 
   <span class="def"> Def: A state being able to crawl, slither, fly, or plod.</span>
-  </span></p>
+  </span> After acquiring the necessary skills from GROK Learning</p>
+</article>
+<Article> 
+  <p> <span class="lead">First Project:</span> A work in progess. Javascript? 
+  </p>
 </article>
 </body> 
