--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
       </ul>
     </nav>
       
-<article>
+<article class="overarching">
+  <article>
 <p><span class="lead">Reality becomes digital: </span> my website is <span class="live">live! 
   <span class="def"> Def: A state being able to crawl, slither, fly, or plod.</span>
-  </span> After acquiring the necessary skills from 'GROK Learning' over a period of several weeks,</p>
+  </span> After acquiring the necessary skills from 'GROK Learning' over a period of several weeks, I have finally succeeded in writing my own website.</p>
 </article>
 <Article> 
   <p> <span class="lead">First Project:</span> A work in progess. Javascript? 
   </p>
 </article>
+  <article> <p> Second Project? Let's wait and see... </p> </article>
+  </article>
 </body> 
