--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
   </article>
   
   <footer>
+  <div class="disclaimer"><h5>DISCLAIMER: I do NOT own any of the images displayed on this site!</h5></div>
   </footer>
 </body> 
