--- a/reflections.html
+++ b/reflections.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<header>
+<header class="sub">
 <h1 class="title">Reflections</h1>
 </header>
 <article class="overarching">
@@ -12,10 +12,10 @@
 <p> <span class="lead">Website</span> </p>
 </article>
 <Article>
-<p>Javascript</p>
+<p <span class="lead">Javascript</span></p>
 </article> 
 <article>
-<p> Second Project </p>
+<p <span class="lead"> Second Project </span></p>
 </article>
 </article>
 </body> 
