--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <article>
 <p><span class="lead">Reality becomes digital: </span> my website is <span class="live">live! 
   <span class="def"> Def: A state being able to crawl, slither, fly, or plod.</span>
-  </span> After acquiring the necessary skills from 'GROK Learning' over a period of several weeks, I have finally succeeded in writing my own website, as you can see.</p>
+  </span> After acquiring the necessary skills from 'GROK Learning' over a period of several weeks, I have finally succeeded in writing my own website.</p>
 </article>
 <Article> 
   <p> <span class="lead">First Project:</span> <a href="javascript.html"> Javascript. </a>
@@ -42,6 +42,6 @@
   </article>
   
   <footer>
-  <div class="disclaimer"><h5>DISCLAIMER: I do NOT own any of the images displayed on this site!</h5></div>
+  <div class="disclaimer"><h5>DISCLAIMER: I do NOT own any of the images displayed on this site!</h5></div><p> All art by Johfra Bosschart. </p>
   </footer>
-</body> 
+</body>
