--- a/thewebsite.html
+++ b/thewebsite.html
@@ -13,7 +13,8 @@
 The major issue I encountered was in the creation of the drop-down menu. Although it was successfully linking to other pages, in terms of styling, I encountered difficulties 
 in getting the sub-links, if you will, to remain hidden, despite having followed prompts from the GROK course, and a few other style issues were encountered in the layout, but ultimately I managed 
 to right most of the faults by applying "Position: Absolute;" and altering values for padding, margins, width, and height. Other than this main issue, I found that to some extent my lack of an eye for web design caused me to spend longer than necessary deciding which fonts and colour scheme would be most appropriate for my site, but I think this is 
-something which ultimately will come with practise. Through the exercise I have become more comfortable working with HTML and CSS, and have come to believe that </p> 
+something which ultimately will come with practise. Through the exercise I have become more comfortable working with HTML and CSS through reinforcement of that which I covered on the GROK course. Although it was fun trying to 
+come up with a design, if I were to improve my website, I would almost certainly start with working to make the design more streamlined and sophisticated.</p> 
 </article>
 <Article>
 <p> Also</p>
