--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
            <li> <a href="thesecond.html">Second Project</a></li>
         </ul>
       </li>
-	  <li> <a href="reflections.html">Reflections</a>
-	  <ul>
-	   <li> <a href="reflections.html">Website</a></li>
-	    <li> <a href="reflections.html">Javascript</a></li>
-		 <li> <a href="reflections.html">Second Project</a></li>
-      </ul>
-      </li> 
+	  <li> <a href="reflections.html">Reflections</a></li> 
      </ul>
     </nav>
       
@@ -42,6 +36,8 @@
   </article>
   
   <footer>
-  <div class="disclaimer"><h5>DISCLAIMER: I do NOT own any of the images displayed on this site!</h5></div><p> All art by Johfra Bosschart. </p>
+  <div class="disclaimer"><h5>DISCLAIMER: I do NOT own any of the images displayed on this site!</h5><br>
+  <p> All art by Johfra Bosschart. </div> </p>
   </footer>
-</body>
+</body> 
+
