--- a/reflections.html
+++ b/reflections.html
@@ -7,15 +7,23 @@
 <header class="sub">
 <h1 class="title">Reflections</h1>
 </header>
+
+ <nav>
+    <ul>
+      <li> <a href="index.html">Home</a></li>
+     </ul>
+    </nav>
+
 <article class="overarching">
 <article>
-<p> <span class="lead">Website</span> </p>
+<p> <span class="lead">Website</span></p>
 </article>
 <Article>
-<p <span class="lead">Javascript</span></p>
+  <p> <span class="lead">Javascript</span></p>
 </article> 
 <article>
-<p <span class="lead"> Second Project </span></p>
+  <p> <span class="lead"> Second Project </span> </p>
 </article>
 </article>
-</body> 
+</body>
+ 
