--- a/javascript.html
+++ b/javascript.html
@@ -7,11 +7,19 @@
 <header class="sub">
 <h1 class="title">Javascript</h1>
 </header>
+
+ <nav>
+    <ul>
+      <li> <a href="index.html">Home</a></li>
+     </ul>
+    </nav>
+
 <article class="overarching">
 <article>
-<p> <span class="lead">Javascipt: my first programming language!</span> </p>
+<p> <span class="lead">Javascript: my first programming language!</span> </p>
 </article>
 <Article>
 <p> Here's a sample of what I've been learning... </p>
+<p> See <a href="quiz.html"> quiz</a> made with Javascript</P>
 </article> 
-</body> 
+</body>
