--- a/thesecond.html
+++ b/thesecond.html
@@ -1,3 +1,5 @@
+
+
 <head> 
 <title>Strangely Enough</title>
 <link rel="stylesheet" href="main.css">
@@ -7,6 +9,13 @@
 <header class="sub">
 <h1 class="title">Second Project</h1>
 </header>
+
+ <nav>
+    <ul>
+      <li> <a href="index.html">Home</a></li>
+     </ul>
+    </nav>
+
 <article class="overarching">
 <article>
 <p> <span class="lead">Nothing to see here!</span> </p>
@@ -15,3 +24,4 @@
 <p>Thinking about another programming language, such as Python, or C#?</p>
 </article> 
 </body> 
+ 
