--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <ul>
       <li> <a href="index.html">Home</a></li>
-      <li> <a href="thewesbite.html">Website</a></li>
+      <li> <a href="#">About Site</a></li>
       <li> <a href="#">Projects</a>
 	       <ul class="drop_projects">  
 	         <li><a href="javascript.html">Javascript</a></li>
@@ -29,7 +29,7 @@
   </span> After acquiring the necessary skills from 'GROK Learning' over a period of several weeks, I have finally succeeded in writing my own website.</p>
 </article>
 <Article> 
-  <p> <span class="lead">First Project:</span> <a href="javascript.html"> Javascript. </a>
+  <p> <span class="lead">First Project:</span> <a href="javascript.html" class="wanthover"> Javascript. </a> Now I slightly better understand the workings of the internet... One step closer to world domination. Just watch me. 
   </p>
 </article>
   <article> <p> <span class="lead">Second Project?</span> Let's wait and see... </p> </article>
