--- a/quiz.html
+++ b/quiz.html
@@ -42,17 +42,16 @@
 <input type="radio" id="radio" name="die" value="1992"> 1992<br> 
 <input type="radio" id="radio" name="die" value="1998"> 1998<br> 
 
-<input id ="button" type="button" value="Check?" onclick = "Check();">
+<input id ="button" type="button" value="Submit" onclick = "check();">
 </form>
 
 
 <div id = "after_submit"> 
-<p id = "number_correct"></p>
+<p id = "number_correct">words</p>
 <p id = "message"></p>
 <img id = "picture"> 
 
 </div>
-
 </body>
 </html> 
 
