--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </article>
   
   <footer>
-  <div class="disclaimer"><h5>DISCLAIMER: I do NOT own any of the images displayed on this site!</h5><br>
+  <div class="disclaimer"><h5 style="font: exo 2;">DISCLAIMER: I do NOT own any of the images displayed on this site!</h5>
   <p> All art by Johfra Bosschart. </div> </p>
   </footer>
 </body> 
