--- a/javascript.html
+++ b/javascript.html
@@ -14,7 +14,7 @@
      </ul>
     </nav>
 
-<article class="overarching">
+<article class="parentlongg">
 <article>
 <p> <span class="lead">Javascript: my first programming language!</span> </p>
 </article>
@@ -22,6 +22,7 @@
 <Article>
 <p> Here's a sample of what I've been learning... See <a href="quiz.html" class="wanthover"> quiz</a> made with Javascript</P>
 </article> 
+<div class="longg"> 
 <article class="longg">
 <p> <span class="lead"> Project report:</span> For this project, I chose to work towards learning JavaScript. I choice this as a project to gain a better understanding of the workings of the internet and computers in general, and to further develop my understanding of programming. Although my aim was, more broadly speaking, to study JavaScript, efforts culminated in the creation of a basic quiz using JavaScript, HTML, and CSS, to display my knowledge and comprehension of the matter. </p>
 <p> In learning JavaScript, (needless to say, an ongoing process,) I used several platforms for learning: the w3Schools JavaScript course, various YouTube tutorials, and assorted other websites. Although the w3Schools course accounted for the bulk of the material I covered, for several reasons I found its method of delivery hard to understand, and to follow: on the whole, although I got a lot out of it, next time I would prefer to take the effort to find a different base of information, for ultimately, w3Schools was jerky, failed to follow a logical pattern or structure, and needlessly repeated some facts without giving due attention to other areas. This was perhaps the most significant issue I encountered with the project, and which made learning JavaScript take longer than it needed to, yet saying this, I found it me longer because I was maybe too thorough in my notes. I.e., it would come as no surprise to my peers that I experienced a pronounced need to paraphrase somewhat more. </p> 
@@ -30,5 +31,6 @@
 <p> The project gave me the ability to build on my knowledge of HTML and CSS for a more complete understanding of different coding languages, and to improve my overall understanding of programming. Furthermore, it helped me to understand an array common principles and methods applied across a broader spectrum of coding.  Although I plan to continue developing my understanding of JS, it helped my in establishing a foundational comprehension for the future. It was also handy to again practise working with HTML and CSS. Perhaps laughable, I also found that despite so many courses’ worth of projects over the years, it was also a valuable experience in maximising efficiency in studying, and in independently approaching a topic for the first time, slash how to find the information I need to do so, or when a source just isn’t working for me. </p> 
 <p> On the whole, I think the experience has greatly helped me better understand the world of computing, and the disciplines involved in programming. </p> 
 </article> 
+</div> 
 </article> 
 </body>
